# xp-workflow-automation

./: .archlint.yaml  .gitignore  .principlesrc  .quality-history.jsonl  .warnings-baseline.json  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  KNOWN_ISSUES.md  LICENSE  README.md  architecture-report.sarif.json  architecture.yaml  eslint.config.js  package-lock.json  package.json  quality-report.json  specification.yaml  stryker.conf.json  tsconfig.json  tsconfig.stryker.json  vitest.config.ts
docs/: AGENTS.md  MULTI-MODEL-REVIEW-GUIDE.md  clean-code-solid-checker-design-APPROVED-v1.0.md  delphi-consensus-report-final.md  delphi-consensus-report-test-specification-alignment-v2.0.md  delphi-final-consensus-report-v2.5.md  gate-validation-guide.md  (+4 more)
skill-cert/: SKILL.md  pyproject.toml
skill-cert/adapters/: anthropic_compat.py  base.py  openai_compat.py
skill-cert/engine/: __init__.py  analyzer.py  config.py  dialogue_evaluator.py  dialogue_runner.py  drift.py  grader.py  metrics.py  reporter.py  runner.py  simulator.py  testgen.py
skill-cert/prompts/: judge.md  judge_dialogue.md  testgen.meta.md
skill-cert/schemas/: evals.schema.json  skillspec.schema.json
skill-cert/scripts/: run_uat.py  verify_uat.py
skill-cert/skill_cert/: __init__.py  cli.py
skill-cert/templates/: minimum-evals.json
skill-cert/tests/: test_adapters.py  test_analyzer.py  test_config.py  test_dialogue_evaluator.py  test_dialogue_runner.py  test_drift.py  test_grader.py  test_metrics.py  test_reporter.py  test_runner.py  test_testgen.py
(+190 files in other folders)
