[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-cert"
version = "0.1.0"
description = "通用 AI Skill 评测引擎 — 自解析、自生成测试、自执行、自评估"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "aiolimiter>=1.1",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
skill-cert = "skill_cert.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
